--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -1,3 +1,13 @@
+@keyframes spin-1c9b16c3-3b0c-4d0f-8d7b-bf997165f8c8 {
+  0% {
+    animation-timing-function: cubic-bezier(0.5856, 0.0703, 0.4143, 0.9297);
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .a-track {
   @apply inline-flex items-center justify-center px-5 py-3 border border-transparent rounded-md;
   @apply font-medium text-base text-white;
