--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -206,3 +206,12 @@
     }
   }
 }
+
+
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to {
+  opacity: 0;
+}
