--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -34,6 +34,7 @@
 }
 
 .hdf-ch2 {
+  @apply px-4;
   @apply lg:text-center;
 
   header {
@@ -54,6 +55,7 @@
 }
 
 .hdf-ch3 {
+  @apply px-4;
   @apply lg:text-center;
 
   header {
